# levelup

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  README.org  justfile
hugin/: Cargo.toml
hugin/examples/: schema.rs
hugin/src/: cli.rs  client.rs  config.rs  ipc.rs  lib.rs  proto.rs  storage.rs  tui.rs  wayland.rs
munin/: Cargo.toml
munin/src/: cli.rs  config.rs  ipc.rs  lib.rs  proto.rs  shells.rs  storage.rs  tui.rs
munin/src/shells/: bash.sh  zsh.sh
