[workspace]
resolver = "3"
members = ["hugin", "munin"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "sync", "signal", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
sd-notify = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "v7"] }
ratatui = "0.29"
crossterm = "0.28"
toml = { version = "0.8", default-features = false, features = ["parse"] }
nucleo-matcher = "0.3"

[profile.release]
lto = "thin"
codegen-units = 1
