[package]
name = "hugin"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
sd-notify.workspace = true
wayland-client = "0.31"
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
nix = { version = "0.29", features = ["fs", "poll"] }
rusqlite = { version = "0.32", features = ["bundled"] }
blake3 = "1"
