[package]
name = "munin"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "munind"
path = "src/bin/munind.rs"

[[bin]]
name = "munin"
path = "src/bin/munin.rs"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
sd-notify.workspace = true
rusqlite.workspace = true
uuid.workspace = true
ratatui.workspace = true
crossterm.workspace = true
toml.workspace = true
